add --enable-preview to gradle application plugin